# openMVG_learning

./: CMakeLists.txt
src/: main.cpp  main2.cpp
